--- a/egg-example/.eslintrc
+++ b/egg-example/.eslintrc
@@ -1,3 +1,6 @@
 {
-  "extends": "eslint-config-egg"
+  "extends": "eslint-config-egg",
+  "rule":{
+    "eslint linebreak-style": ["off", "windows"]
+  }
 }
